package entity.base;

/**
 * The interface Renderable. Indicated that the entity is dynamic and can be updated.
 */
public interface Renderable {
    /**
     * Handle the position update.
     */
    void update();
}
